<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="lib_app_name">LxAndroidFrame</string>

    <string name="dlg_edit_title">编辑</string>
    <string name="dlg_loading_default_message">正在加载&#8230;</string>
    <string name="dlg_loading_login_message">正在登录&#8230;</string>
    <string name="dlg_delete_title">提示</string>
    <string name="dlg_delete_message">确定要删除?</string>

    <string name="crop_image_title">裁剪图片</string>
    <string name="crop_image_saving">正在保存照片&#8230;</string>

    <string name="image_Browser_toast_load_image_fail">加载图片失败</string>
    <string name="image_Browser_toast_list_null">空图片列表!</string>

    <string name="image_editor_title">编辑图片</string>
    <string name="image_editor_btn_width">粗细</string>
    <string name="image_editor_btn_color">颜色</string>
    <string name="image_editor_btn_rect">矩形</string>
    <string name="image_editor_btn_pen">画笔</string>
    <string name="image_editor_btn_cancel">清除</string>
    <string name="image_editor_btn_done">完成</string>
    <string name="image_editor_browser_menu">编辑</string>
    <string name="image_editor_toast_save_fail">保存图片失败</string>
    <string name="image_editor_toast_invalid_image">无效的图片</string>

    <string name="mis_title">选择图片</string>
    <string name="mis_folder_all">所有照片</string>
    <string name="mis_preview">预览</string>
    <string name="mis_camera">拍摄照片</string>
    <string name="mis_toast_no_camera">未找到系统相机</string>
    <string name="mis_toast_amount_limit">已经达到最高选择数量</string>
    <string name="mis_toast_invalid_image">无法打开这张图片&#8230;</string>
    <string name="mis_toast_data_stale_exception">图片数据异常,请重试</string>
    <string name="mis_folder_img_amount"><xliff:g>%d</xliff:g>张</string>
    <string name="mis_finish_btn">完成</string>
    <string name="mis_finish_btn_with_amount">完成(<xliff:g>%d</xliff:g>/<xliff:g>%d</xliff:g>)</string>
    <string name="mis_image_browser_select">选择</string>

    <string name="mipca_title">扫描二维码</string>
    <string name="mipca_select_code_image_title">选择二维码图片</string>
    <string name="mipca_scan_hint">将二维码放入框内, 即可自动扫描</string>
    <string name="mipca_toast_finish_activity">长时间未识别,请重新发起扫描</string>
    <string name="mipca_toast_init_camera_fail">初始化扫描失败</string>

    <string name="swipe_refresh_default_footer_loading">努力加载中&#8230;</string>
    <string name="swipe_refresh_default_footer_done">没有更多了</string>

    <string name="add_image_widget_menu_delete">删除图片</string>
    <string name="add_image_widget_menu_doodle">图片涂鸦</string>

    <string name="toast_path_sdcard_not_mounted">存储卡不可用</string>
    <string name="toast_path_sdcard_full">存储卡已满</string>
    <string name="toast_path_create_dir_fail">创建文件夹失败</string>
    <string name="toast_double_click_exit">再按一次退出</string>


    <string name="time_utils_yesterday">昨天 <xliff:g>%s</xliff:g></string>

</resources>
