<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#555555"
    android:gravity="center"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#80000000" >

        <ImageView
            android:id="@+id/image_editor_action_bar_back"
            android:layout_height="45dp"
            android:layout_width="45dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:src="@drawable/ic_action_bar_back_pressed"
            android:background="@drawable/bkg_clickable"
            android:contentDescription="@null" />

        <TextView
            android:id="@+id/image_editor_action_bar_title"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:text="@string/image_editor_title"
            android:singleLine="true" />

        <FrameLayout
            android:id="@+id/image_editor_action_bar_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/image_editor_image_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="15dp" >

        <ImageView
            android:id="@+id/image_editor_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:contentDescription="@null" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f7f7f7"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/image_editor_btn_width"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/image_editor_btn_width_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="center"
                android:src="@drawable/image_editor_dot_middle"
                android:contentDescription="@null" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/image_editor_btn_width"
                android:textColor="#c4c4c4" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/image_editor_btn_color"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/image_editor_btn_color_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="center"
                android:src="@drawable/image_editor_colorchoose_red"
                android:contentDescription="@null" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/image_editor_btn_color"
                android:textColor="#c4c4c4" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/image_editor_btn_rect"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/image_editor_btn_rect_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="center"
                android:src="@drawable/image_editor_rectangle_off"
                android:contentDescription="@null" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/image_editor_btn_rect"
                android:textColor="#c4c4c4" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/image_editor_btn_pen"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/image_editor_btn_pen_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="center"
                android:src="@drawable/image_editor_pen_on"
                android:contentDescription="@null" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/image_editor_btn_pen"
                android:textColor="#c4c4c4" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/image_editor_btn_clean"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/image_editor_btn_clean_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="center"
                android:src="@drawable/image_editor_clear"
                android:contentDescription="@null" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/image_editor_btn_cancel"
                android:textColor="#c4c4c4" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/image_editor_btn_done"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/image_editor_btn_done_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="center"
                android:src="@drawable/image_editor_done"
                android:contentDescription="@null" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/image_editor_btn_done"
                android:textColor="#c4c4c4" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>